--- a/contact.html
+++ b/contact.html
@@ -47,15 +47,20 @@
             <div class="fourth">
                 <span style="color:white; font:large;"><h1>Let's talk.</h1></span><br>
                 <p>Get in touch via the form below, or by emailing <span style="color:gold">aniketbaidyarocks@gmail.com</span></p><br>
-                <form>
-                    <h4>Name:</h4>
-                    <input type="text" placeholder="Enter your name"><br>
-                    <h4>Email Address:</h4>
-                    <input type="text" placeholder="Enter your Email Address"><br>
-                    <h4>Email Message:</h4>
-                    <textarea placeholder="Enter your Message" rows="4" cols="50"></textarea><br><br>
-                    <button id="submit"><span style="color: gold;">Submit</span></button>
-                </form>
+                <form action="https://formspree.io/f/xoqyapdq" method="POST">
+  <label>
+    Your email:
+    <input type="email" name="_replyto">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+
+  <!-- your other form fields go here -->
+
+  <button type="submit">Send</button>
+</form>
             </div>
         </body>
         <br>
