--- a/contact.html
+++ b/contact.html
@@ -49,18 +49,20 @@
                 <p>Get in touch via the form below, or by emailing <span style="color:gold">aniketbaidyarocks@gmail.com</span></p><br>
                 <form action="https://formspree.io/f/xoqyapdq" method="POST">
   <label>
-    Your email:
+    Enter Your Email Address
     <input type="email" name="_replyto">
   </label>
   <label>
-    Your message:
+    Enter Your Message
     <textarea name="message"></textarea>
   </label>
-
-  <!-- your other form fields go here -->
-
   <button type="submit">Send</button>
 </form>
-            </div>
+ </div>
+  <span style="color:white;font-size: large;"><h2> My Contact Links</h2></span>
+            <p>
+                <a href="www.linkedin.com/in/aniketbaidya1191b3"><span style="color: gold;">My LinkedIn Profile</span></a><br><br>
+                <a href="https://github.com/DEV-AB-03"><span style="color: gold;">My Github Profile</span></a>
+            </p>
         </body>
         <br>
