--- a/contact.html
+++ b/contact.html
@@ -59,9 +59,10 @@
   <button type="submit">Send</button>
 </form>
  </div>
+            <br<<br>
   <span style="color:white;font-size: large;"><h2> My Contact Links</h2></span>
             <p>
-                <a href="www.linkedin.com/in/aniketbaidya1191b3"><span style="color: gold;">My LinkedIn Profile</span></a><br><br>
+                <a href="https://www.linkedin.com/in/aniketbaidya1191b3/"><span style="color: gold;">My LinkedIn Profile</span></a><br><br>
                 <a href="https://github.com/DEV-AB-03"><span style="color: gold;">My Github Profile</span></a>
             </p>
         </body>
