--- a/contact.html
+++ b/contact.html
@@ -50,13 +50,13 @@
                 <form action="https://formspree.io/f/xoqyapdq" method="POST">
   <label>
     Enter Your Email Address
-    <input type="email" name="_replyto">
+    <input type="email" name="_replyto" placeholder="Enter your Email Address">
   </label>
   <label>
     Enter Your Message
-    <textarea name="message"></textarea>
+    <textarea name="message" placeholder="Enter your Message" rows="4" cols="50"></textarea>
   </label>
-  <button type="submit">Send</button>
+  <button type="submit" id="submit">Send The Message</button>
 </form>
  </div>
             <br<<br>
