--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     Enter Your Message
     <textarea name="message" placeholder="Enter your Message" rows="4" cols="50"></textarea>
   </label>
-  <button type="submit" id="submit">Send The Message</button>
+  <button type="submit" id="submit"><span style="color: gold;">Send The Message</span></button>
 </form>
  </div>
             <br<<br>
