--- a/contact.html
+++ b/contact.html
@@ -50,11 +50,11 @@
                 <form action="https://formspree.io/f/xoqyapdq" method="POST">
                 <label>
                         Enter Your Email Address
-                        <input type="email" name="_replyto" placeholder="Enter your Email Address">
+                        <input type="email" name="Message Sender" placeholder="Enter your Email Address">
                  </label>
                  <label>
                         Enter Your Message
-                        <textarea name="message" placeholder="Enter your Message" rows="4" cols="50"></textarea>
+                        <textarea name="Message Sent" placeholder="Enter your Message" rows="4" cols="50"></textarea>
                   </label>
                     <button type="submit" id="submit"><span style="color: gold;">Send The Message</span></button>
                     </form>
