--- a/contact.html
+++ b/contact.html
@@ -49,13 +49,13 @@
                 <p>Get in touch via the form below, or by emailing <span style="color:gold">aniketbaidyarocks@gmail.com</span></p><br>
                 <form action="https://formspree.io/f/xoqyapdq" method="POST">
                 <label>
-                        Enter Your Email Address
-                        <input type="email" name="Message Sender" placeholder="Enter your Email Address">
+                        Enter Your Email Address<br>
+                        <input type="email" name="Message Sender" placeholder="Enter your Email Address"><br>
                  </label>
                     <br><br>
                  <label>
-                        Enter Your Message
-                        <textarea name="Message Sent" placeholder="Enter your Message" rows="4" cols="50"></textarea>
+                        Enter Your Message<br>
+                        <textarea name="Message Sent" placeholder="Enter your Message" rows="4" cols="50"></textarea><br>
                   </label>
                     <br><br>
                     <button type="submit" id="submit"><span style="color: gold;">Send The Message</span></button>
