--- a/contact.html
+++ b/contact.html
@@ -52,16 +52,16 @@
                         Enter Your Email Address<br>
                         <input type="email" name="Message Sender" placeholder="Enter your Email Address"><br>
                  </label>
-                    <br><br>
+                    <br>
                  <label>
                         Enter Your Message<br>
                         <textarea name="Message Sent" placeholder="Enter your Message" rows="4" cols="50"></textarea><br>
                   </label>
                     <br><br>
-                    <button type="submit" id="submit"><span style="color: gold;">Send The Message</span></button>
+                    <button type="submit" id="submit"><span style="color: gold;">Send The Message</span></button><br>
                     </form>
              </div>
-            <br<<br>
+            <br<<br><br>
   <span style="color:white;font-size: large;"><h2> My Contact Links</h2></span>
             <p>
                 <a href="https://www.linkedin.com/in/aniketbaidya1191b3/"><span style="color: gold;">My LinkedIn Profile</span></a><br><br>
