--- a/work.html
+++ b/work.html
@@ -30,7 +30,7 @@
         </div>
         <nav>
             <ul class="menu">
-                <a href="port.html"><li>Home</li></a>
+                <a href="index.html"><li>Home</li></a>
                 <a href="about.html"><li>About</li></a>
                 <a href="work.html"><li><span style="color: gold;">Work</span></li></a>
             </ul>
