--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             </div>
             <nav>
                 <ul class="menu">
-                    <a href="port.html"><li>Home</li></a>
+                    <a href="index.html"><li>Home</li></a>
                     <a href="about.html"><li><span style="color: gold;">About</span></li></a>
                     <a href="work.html"><li>Work</li></a>
                 </ul>
