Simplify footer text in index.html
Removed extra text from the footer description.

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
     <!-- FOOTER -->
     <footer class="bg-dark text-white text-center py-4">
         <div class="container">
-            <p class="mb-0 small">&copy; 2025 Aniket Baidya. Fully responsive, themed, and dynamically polished portfolio.</p>
+            <p class="mb-0 small">&copy; 2025 Aniket Baidya.</p>
         </div>
     </footer>
 
